# app/serializers/skill_serializer.rb
@@ -1,0 +1,3 @@
+class SkillSerializer < ActiveModel::Serializer
+  attributes :id, :name, :created_at, :updated_at
+end
